# FancySquareRoot

./: CMakeLists.txt  README.md
inc/: MyFancySquareRoot.hpp
src/: MyFancySquareRoot.cpp
test/: main.cpp
